tests/type/bad/field_unknown.hel
foreign io_unit: IO<()>;

type Point = { x: f64, y: f64 };

p = Point{ x: 1.0, y: 2.0 };
z = p.z;

main = io_unit;
